--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -10,6 +10,7 @@
 <body class="works_on_smartphone">
     <header>
         <ul>
+            <li class="logo">&#9770;</li>
             <li><a href="index.html">HomePage</a></li>
             <li><a href="tweets.html">Tweet Page</a></li>
         </ul>
