--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="logo">
             <img src="../css_advanced/Images/logo.png" alt="logo">
             <ul>
                 <li><a href="#">COURSE</a></li>
@@ -19,33 +19,33 @@
         </nav>        
     </header>
     <main>
-        <section>
-            <div>
-                <h1>Get schooled</h1>
+        <section class="banner">
+            <h1>Get schooled</h1>
+            <div class="keywords">
                 <span>SMILES</span>
                 <span>GRIN</span>
                 <span>LAUGH</span>
-                <button type="button">REGISTER FOR FREE</button>
             </div>
-            <div>
-                <h2>Learn from the pros</h2>
-                <div>
-                    <div>
+            <button type="button">REGISTER FOR FREE</button>
+            <div class="learn">
+                <h2><span>Learn</span> from the pros</h2>
+                <div class="profiles">
+                    <div class="profile">
                         <img src="../css_advanced/Images/1.png" alt="Phillip">
                         <h3>Phillip Massey</h3>
                         <p>« Smile of the year » 2018 - 2019</p>
                     </div>
-                    <div>
+                    <div class="profile">
                         <img src="../css_advanced/Images/3.png" alt="Nannie">
                         <h3>Nannie Lawrence</h3>
                         <p>Best « little smile » 2017</p>
                     </div>
-                    <div>
+                    <div class="profile">
                         <img src="../css_advanced/Images/2.png" alt="Bruce">
                         <h3>Bruce Walters</h3>
                         <p>Best « Friend Smile » live performance 2019</p>
                     </div>
-                    <div>
+                    <div class="profile">
                         <img src="../css_advanced/Images/4.png" alt="Henry">
                         <h3>Henry Hughes</h3>
                         <p>« 24h smiles » winner 2016 - 2019</p>
