styled the quote section of the html file

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -53,14 +53,15 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div>
+        <section class="quote">
+            <div class="main_quote">
                 <img src="../css_advanced/Images/5.png" alt="image">
-            </div>
-            <div>
-                <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
-                <h3>Person Name</h3>
-                <P>weather presenter</P>
+                <div class="quote_text">
+                    <blockquote>
+                        « Those tutorials are concise and go straight to the point. I can’t think of a better<br>place to learn smiling.And it’s so fun!<br><br>                    </blockquote>
+                    <h4>Person Name</h4><br>
+                    <p><em>weather presenter</em></p>
+                </div>
             </div>
         </section>
         <section>
