--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -64,75 +64,92 @@
                 </div>
             </div>
         </section>
-        <section>
-            <h2>Most popular tutorials</h2>
-            <div>
-                <img src="../css_advanced/Images/9.png" alt="">
-                <h3>Diagonal Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="../css_advanced/Images/1.png" alt="">
-                    <h4>Phillip Massey</h4>
+        <section class="tutorial">
+            <h2>Most <span>popular</span> tutorials</h2>
+            <div class="tutorial-list">
+                <div class="video-card">
+                    <div class="thumbnail">
+                        <img src="../css_advanced/Images/9.png" alt="">
+                        <div class="play-button">
+                            <img src="../css_advanced/Images/play.png" alt="Play Button">
+                        </div>
+                    </div>
+                    <div class="video-info">
+                        <h3>Diagonal Smile</h3>
+                        <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                        <div class="author">
+                            <img src="../css_advanced/Images/1.png" alt="">
+                            <h4>Phillip Massey</h4>
+                        </div>
+                        <div class="rating">
+                            <img src="../css_advanced/Images/rating.png" alt="5-star rating">
+                        </div>
+                        <p class="duration">8 min</p>
+                    </div>
                 </div>
-                <div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
+
+                <div class="video-card">
+                    <div class="thumbnail">
+                        <img src="../css_advanced/Images/6.png" alt="">
+                        <div class="play-button">
+                            <img src="../css_advanced/Images/play.png" alt="Play Button">
+                        </div>
+                    </div>
+                    <div class="video-info">
+                        <h3>Happy Smile</h3>
+                        <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                        <div class="author">
+                            <img src="../css_advanced/Images/1.png" alt="">
+                            <h4>Phillip Massey</h4>
+                        </div>
+                        <div class="rating">
+                            <img src="../css_advanced/Images/rating.png" alt="5-star rating">
+                        </div>
+                        <p class="duration">8 min</p>
+                    </div>
                 </div>
-                <p>8 min</p>
-            </div>
-            <div>
-                <img src="../css_advanced/Images/6.png" alt="">
-                <h3>Happy Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="../css_advanced/Images/1.png" alt="">
-                    <h4>Phillip Massey</h4>
+
+                <div class="video-card">
+                    <div class="thumbnail">
+                        <img src="../css_advanced/Images/8.png" alt="">
+                        <div class="play-button">
+                            <img src="../css_advanced/Images/play.png" alt="Play Button">
+                        </div>
+                    </div>
+                    <div class="video-info">
+                        <h3>Natural Smile</h3>
+                        <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                        <div class="author">
+                            <img src="../css_advanced/Images/1.png" alt="">
+                            <h4>Phillip Massey</h4>
+                        </div>
+                        <div class="rating">
+                            <img src="../css_advanced/Images/rating.png" alt="5-star rating">
+                        </div>
+                        <p class="duration">8 min</p>
+                    </div>
                 </div>
-                <div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
+
+                <div class="video-card">
+                    <div class="thumbnail">
+                        <img src="../css_advanced/Images/7.png" alt="">
+                        <div class="play-button">
+                            <img src="../css_advanced/Images/play.png" alt="Play Button">
+                        </div>
+                    </div>
+                    <div class="video-info">
+                        <h3>Sad Smile</h3>
+                        <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                        <div class="author">
+                            <img src="../css_advanced/Images/1.png" alt="">
+                            <h4>Phillip Massey</h4>
+                        </div>
+                        <div class="rating">
+                            <img src="../css_advanced/Images/rating.png" alt="5-star rating">
+                        </div>
+                        <p class="duration">8 min</p>
+                    </div>
                 </div>
-                <p>8 min</p>
-            </div>
-            <div>
-                <img src="../css_advanced/Images/8.png" alt="">
-                <h3>Natural Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="../css_advanced/Images/1.png" alt="">
-                    <h4>Phillip Massey</h4>
-                </div>
-                <div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                </div>
-                <p>8 min</p>
-            </div>
-            <div>
-                <img src="../css_advanced/Images/7.png" alt="">
-                <h3>Sad Smile</h3>
-                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                <div>
-                    <img src="../css_advanced/Images/1.png" alt="">
-                    <h4>Phillip Massey</h4>
-                </div>
-                <div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                    <div><i class="fa-solid fa-star"></i></div>
-                </div>
-                <p>8 min</p>
             </div>
         </section>
         <section>
