--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -152,29 +152,31 @@
                 </div>
             </div>
         </section>
-        <section>
-            <h2>Free membership</h2>
-            <div>
-                <img src="../css_advanced/Images/smile.png" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <section class="membership">
+            <h2><span>Free</span> membership</h2>
+            <div class="m_cards">
+                <div class="m_card">
+                    <img src="../css_advanced/Images/smile.png" alt="">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="m_card">
+                    <img src="../css_advanced/Images/smile.png" alt="">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="m_card">
+                    <img src="../css_advanced/Images/smile.png" alt="">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="m_card">
+                    <img src="../css_advanced/Images/smile.png" alt="">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
             </div>
-            <div>
-                <img src="../css_advanced/Images/smile.png" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
-                <img src="../css_advanced/Images/smile.png" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div>
-                <img src="../css_advanced/Images/smile.png" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <button type="button">REGISTER FOR FREE</button>
+            <button type="button" class="m_button">REGISTER FOR FREE</button>
         </section>
         <section>
             <h2>F.A.Q</h2>
