styled the Footer section of the webpage

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -214,16 +214,16 @@
         </section>
     </main>
     <footer>
-        <section>
-            <div>
+        <section class="footer">
+            <div class="footer_all">
                 <img src="../css_advanced/Images/logo.png" alt="logo">
-                <div>
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-instagram"></i>
+                <div class=" footer_right">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
-            <p>©smileschool 2020</p>
+            <p class="footer_copy">©smileschool 2020</p>
         </section>
     </footer>
 </body>
